--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -52,9 +52,9 @@ jobs:
 
     steps:
       - name: Run OWASP ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.8.4
+        uses: zaproxy/action-baseline@v0.14.0
         with:
-          target: 'https://example.com'  # 🔁 Replace with your running app or test URL
+          target: 'https://www.zaproxy.org'  # 🔁 Replace with your running app or test URL
           cmd_options: '-a'               # Authenticated scan (optional flag)
 
       - name: Upload ZAP report
