--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -5,6 +5,11 @@ on:
     branches: [main]
   pull_request:
   workflow_dispatch:
+  
+permissions:
+  contents: read
+  issues: write            # <-- Needed so ZAP can create issues
+  security-events: write
 
 jobs:
   sast:
