Change sonar-scan workflow to use Ubuntu runner
Updated the CI workflow to run on Ubuntu instead of a self-hosted Windows runner and modified the Docker run command accordingly.

--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -8,30 +8,24 @@ on:
 
 jobs:
   sonar-scan:
-    # ensure this runs on your self-hosted runner that can reach localhost:9000
-    runs-on: [self-hosted, windows]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up environment (optional)
-        shell: powershell
+      - name: Set up environment
         run: |
-          echo "Workspace: $env:GITHUB_WORKSPACE"
-          # Ensure Docker is available on runner and running (Docker Desktop)
+          echo "Workspace: $GITHUB_WORKSPACE"
           docker --version
 
       - name: Run SonarScanner (Docker)
-        # Use Docker to run SonarScanner CLI so you don't have to install it on runner
         run: |
-          REM For PowerShell on Windows self-hosted runner, use ${PWD} for mount
-          docker run --rm ^
-            -e "SONAR_HOST_URL=http://host.docker.internal:9000" ^
-            -e "SONAR_LOGIN=${{ secrets.SONAR_TOKEN }}" ^
-            -v "${{ github.workspace }}:/usr/src" ^
-            sonarsource/sonar-scanner-cli ^
-            -Dsonar.projectKey=py-api-demo ^
-            -Dsonar.sources=. ^
-            -Dsonar.host.url=http://host.docker.internal:9000
-        shell: powershell
+          docker run --rm \
+            -e SONAR_HOST_URL="http://localhost:9000" \
+            -e SONAR_LOGIN="${{ secrets.SONAR_TOKEN }}" \
+            -v "${{ github.workspace }}:/usr/src" \
+            sonarsource/sonar-scanner-cli \
+            -Dsonar.projectKey=py-api-demo \
+            -Dsonar.sources=. \
+            -Dsonar.host.url=http://localhost:9000
