--- a/.github/workflows/advanced-security-scan.yml
+++ b/.github/workflows/advanced-security-scan.yml
@@ -6,11 +6,7 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions:
-  actions: read
-  contents: read
-  security-events: write
-  
+permissions: write-all  
 jobs:
   security-scan:
     runs-on: ubuntu-latest
