Set write-all permissions in codeql.yml
Add permissions for CodeQL workflow

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -19,6 +19,8 @@ on:
   schedule:
     - cron: '31 5 * * 4'
 
+permissions: write-all
+
 jobs:
   analyze:
     name: Analyze (${{ matrix.language }})
