--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,7 +2,11 @@ name: Pylint
 
 on: [push]
 
-permissions: write-all
+permissions:
+  contents: read
+  actions: write
+  pull-requests: write
+  security-events: write
 
 jobs:
   build:
