--- a/.github/workflows/advanced-security-scan.yml
+++ b/.github/workflows/advanced-security-scan.yml
@@ -8,9 +8,11 @@ on:
 
 permissions:
   contents: read
+  issues: write
   actions: write
-  pull-requests: write
   security-events: write
+  pull-requests: write
+  id-token: write
 
 jobs:
   security-scan:
