--- a/.github/workflows/security-alerts.yml
+++ b/.github/workflows/security-alerts.yml
@@ -1,4 +1,3 @@
-# .github/workflows/security-alerts.yml
 name: "Security Alerts to Slack"
 
 on:
@@ -11,22 +10,45 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
-      - name: Send Slack Alert
-        if: ${{ github.event.workflow_run.conclusion != 'success' }}
+      - name: Send Slack Alert on Success
+        if: ${{ github.event.workflow_run.conclusion == 'success' }}
         uses: slackapi/slack-github-action@v1.27.0
         with:
           payload: |
             {
-              "text": ":rotating_light: *Security Alert!* CodeQL scan failed on `${{ github.repository }}`.",
+              "text": ":white_check_mark: *CodeQL Scan Passed!*",
               "attachments": [
                 {
-                  "color": "danger",
+                  "color": "good",
                   "fields": [
-                    { "title": "Branch", "value": "${{ github.ref }}", "short": true },
-                    { "title": "Run URL", "value": "${{ github.event.workflow_run.html_url }}", "short": true }
+                    { "title": "Repository", "value": "${{ github.repository }}", "short": true },
+                    { "title": "Branch", "value": "${{ github.event.workflow_run.head_branch }}", "short": true },
+                    { "title": "Run URL", "value": "${{ github.event.workflow_run.html_url }}", "short": false }
                   ]
                 }
               ]
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Send Slack Alert on Failure
+        if: ${{ github.event.workflow_run.conclusion != 'success' }}
+        uses: slackapi/slack-github-action@v1.27.0
+        with:
+          payload: |
+            {
+              "text": ":rotating_light: *Security Alert!* CodeQL scan failed!",
+              "attachments": [
+                {
+                  "color": "danger",
+                  "fields": [
+                    { "title": "Repository", "value": "${{ github.repository }}", "short": true },
+                    { "title": "Branch", "value": "${{ github.event.workflow_run.head_branch }}", "short": true },
+                    { "title": "Run URL", "value": "${{ github.event.workflow_run.html_url }}", "short": false }
+                  ]
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
