--- a/.github/workflows/secure-build.yml
+++ b/.github/workflows/secure-build.yml
@@ -17,29 +17,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout code
+      # 1️ Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Python
+      # 2️ Setup Python
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # 3️⃣ Install dependencies
+      # 3️ Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # 4️⃣ Run dependency vulnerability scan using pip-audit
+      # 4️ Run dependency vulnerability scan using pip-audit
       - name: Run pip-audit (Dependency Scan)
         run: |
           pip install pip-audit
           pip-audit
 
-      # 5️⃣ Run SAST scan using CodeQL
+      # 5️ Run SAST scan using CodeQL
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
@@ -52,8 +52,19 @@ jobs:
         uses: github/codeql-action/analyze@v3
         with:
           category: "/language:python"
+          
+       # 6 Run Semgrep (optional, powerful rules engine)
+      - name: Run Semgrep
+        run: |
+          pip install semgrep
+          semgrep --config auto --json --output semgrep-report.json || true
+      - name: Upload Semgrep report
+        uses: actions/upload-artifact@v4
+        with:
+          name: semgrep-report
+          path: semgrep-report.json
 
-      # 6️⃣ Run SonarCloud Scan
+      # 7 Run SonarCloud Scan
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
         env:
