--- a/.github/workflows/secure-build.yml
+++ b/.github/workflows/secure-build.yml
@@ -20,8 +20,20 @@ jobs:
       # 1️ Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
+        
+      # 2 Gitleaks Secret Scanner
+      - name: Run Gitleaks (Secrets Scan)
+        uses: zricethezav/gitleaks-action@v2
+        with:
+          args: --path=. --no-git --redact
+      - name: Upload Gitleaks report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: gitleaks-report
+          path: gitleaks-report.json
 
-      # 2️ Setup Python
+      # 3 Setup Python
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
