--- a/.github/workflows/secure-build.yml
+++ b/.github/workflows/secure-build.yml
@@ -84,11 +84,14 @@ jobs:
         with:
           projectBaseDir: .
       # 9 SBOM - Software Bill of Materials (Syft)
+      - name: Install Syft
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
+
       - name: Generate SBOM (Syft)
-        uses: anchore/syft-action@v0.1.2
-        with:
-          output: sbom.spdx.json
-          format: spdx-json
+        run: |
+          syft . -o spdx-json=sbom.spdx.json
+
       - name: Upload SBOM
         uses: actions/upload-artifact@v4
         with:
