--- a/.github/workflows/secure-build.yml
+++ b/.github/workflows/secure-build.yml
@@ -109,5 +109,22 @@ jobs:
           IMAGE_TAG="${{ github.sha }}"
           docker buildx build --load -t "${IMAGE_NAME}:${IMAGE_TAG}" .
           echo "image=${IMAGE_NAME}:${IMAGE_TAG}" >> $GITHUB_OUTPUT
-        
+    
+    # 11 Trivy - Container Vulnerability Scan
+      - name: Run Trivy Image Scan
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ steps.build_image.outputs.image }}
+          format: json
+          output: trivy-report.json
+          severity: HIGH,CRITICAL
+          exit-code: 0
+      - name: Upload Trivy Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-report
+          path: trivy-report.json
 
+        
+      
