--- a/.github/workflows/secure-build.yml
+++ b/.github/workflows/secure-build.yml
@@ -130,5 +130,20 @@ jobs:
           name: trivy-report
           path: trivy-report.json
 
+    # 12 Build Docker image
+      - name: Build Docker image
+        run: |
+          docker build -t $DOCKER_REGISTRY/my-python-app:latest .
+
+    # 13 Login to Nexus Docker registry
+      - name: Docker login
+        run: |
+          echo $DOCKER_PASSWORD | docker login $DOCKER_REGISTRY -u $DOCKER_USERNAME --password-stdin
+
+    # 14 Push Docker image
+      - name: Push Docker image
+        run: |
+          docker push $DOCKER_REGISTRY/my-python-app:latest
+
         
       
