--- a/.github/workflows/secure-build.yml
+++ b/.github/workflows/secure-build.yml
@@ -9,33 +9,26 @@ on:
 permissions:
   actions: read
   contents: read
-  security-events: write   # ✅ Required for CodeQL to upload results
+  security-events: write   # Required for CodeQL
 
 jobs:
-  build:
-    name: Build & Scan
+  build-and-scan:
+    name: Build, Scan & Push
     runs-on: ubuntu-latest
     services:
       nexus:
         image: sonatype/nexus3
         ports:
           - 8081:8081
-        options: >-
-          --health-cmd "curl -f http://localhost:8081 || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 10
       registry:
         image: registry:2
         ports:
           - 5000:5000
 
     steps:
-      # 1️ Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
-        
-      # 2 Gitleaks Secret Scanner
+
       - name: Run Gitleaks (Secrets Scan)
         uses: zricethezav/gitleaks-action@v2
         with:
@@ -47,25 +40,21 @@ jobs:
           name: gitleaks-report
           path: gitleaks-report.json
 
-      # 3 Setup Python
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # 4 Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # 5 Run dependency vulnerability scan using pip-audit
       - name: Run pip-audit (Dependency Scan)
         run: |
           pip install pip-audit
           pip-audit
 
-      # 6 Run SAST scan using CodeQL
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
@@ -78,8 +67,7 @@ jobs:
         uses: github/codeql-action/analyze@v3
         with:
           category: "/language:python"
-          
-       # 7 Run Semgrep (optional, powerful rules engine)
+
       - name: Run Semgrep
         run: |
           pip install semgrep
@@ -90,41 +78,37 @@ jobs:
           name: semgrep-report
           path: semgrep-report.json
 
-      # 8 Run SonarCloud Scan
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           projectBaseDir: .
-      # 9 SBOM - Software Bill of Materials (Syft)
+
       - name: Install Syft
         run: |
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
 
       - name: Generate SBOM (Syft)
-        run: |
-          syft . -o spdx-json=sbom.spdx.json
+        run: syft . -o spdx-json=sbom.spdx.json
 
       - name: Upload SBOM
         uses: actions/upload-artifact@v4
         with:
           name: sbom
           path: sbom.spdx.json
-        
-     # 10 Docker Build using Buildx
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker Image
         id: build_image
         run: |
-          IMAGE_NAME="${{ github.repository_owner }}/secure-app"
-          IMAGE_TAG="${{ github.sha }}"
+          IMAGE_NAME="localhost:5000/my-python-app"
+          IMAGE_TAG="latest"
           docker buildx build --load -t "${IMAGE_NAME}:${IMAGE_TAG}" .
           echo "image=${IMAGE_NAME}:${IMAGE_TAG}" >> $GITHUB_OUTPUT
-    
-    # 11 Trivy - Container Vulnerability Scan
+
       - name: Run Trivy Image Scan
         uses: aquasecurity/trivy-action@master
         with:
@@ -140,21 +124,44 @@ jobs:
           name: trivy-report
           path: trivy-report.json
 
-    # 12 Build Docker image
-      - name: Build Docker image
-        run: |
-          docker build -t localhost:5000/my-python-app:latest .
-          
-      - name: Wait for registry
+      - name: Wait for ephemeral services
         run: sleep 30
 
       - name: Docker login to ephemeral registry
-        run: |
-          echo "dummy" | docker login localhost:5000 -u dummy --password-stdin
+        run: echo "dummy" | docker login localhost:5000 -u dummy --password-stdin
 
       - name: Push Docker image
-        run: |
-          docker push localhost:5000/my-python-app:latest
+        run: docker push localhost:5000/my-python-app:latest
 
-        
-      
+      - name: Verify images in registry
+        run: curl http://localhost:5000/v2/_catalog
+
+  deploy:
+    name: Deploy to Kubernetes
+    runs-on: ubuntu-latest
+    needs: build-and-scan
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: 'v1.29.0'
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: 'v3.12.0'
+
+      - name: Configure kubeconfig
+        run: echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
+
+      - name: Deploy Helm chart
+        run: |
+          helm upgrade --install my-python-app ./helm/my-python-app \
+            --set image.repository=localhost:5000/my-python-app \
+            --set image.tag=latest \
+            --namespace my-namespace \
+            --create-namespace
+
+
