--- a/.github/workflows/secure-build.yml
+++ b/.github/workflows/secure-build.yml
@@ -154,7 +154,9 @@ jobs:
           version: 'v3.12.0'
 
       - name: Configure kubeconfig
-        run: echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
+        run: |
+          mkdir -p $HOME/.kube
+          echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
 
       - name: Deploy Helm chart
         run: |
