--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -91,3 +91,21 @@ jobs:
             --create-namespace \
             --set image.repository=localhost:5000/my-python-app \
             --set image.tag=latest
+
+      - name: Check Pods and Deployment Status
+        run: |
+            kubectl get nodes -o wide
+            kubectl get all -n my-namespace
+            kubectl rollout status deployment/my-python-app -n my-namespace
+
+      - name: Port-forward service
+        run: |
+          nohup kubectl port-forward svc/my-python-app -n my-namespace 8080:80 &
+          sleep 5
+
+      - name: Run OWASP ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.12.0
+        with:
+          target: "http://localhost:8080"
+        continue-on-error: true
+
