--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -28,10 +28,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # --- Security Scans ---
-      # (Keep your previous steps for Gitleaks, pip-audit, CodeQL, Semgrep, Syft, Trivy)
+      # (Keep your scanning steps here: Gitleaks, pip-audit, CodeQL, Semgrep, Syft, Trivy)
 
-      # --- Docker Build & Push ---
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -52,12 +50,30 @@ jobs:
       - name: Verify images in registry
         run: curl http://localhost:5000/v2/_catalog
 
+      - name: Save docker image to file
+        run: docker save localhost:5000/my-python-app:latest -o my-python-app.tar
+        shell: bash
+
+      - name: Upload the image artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-python-app
+          path: my-python-app.tar
+
+
   deploy:
     name: Deploy to Kubernetes (Ephemeral)
     runs-on: ubuntu-latest
     needs: build-and-scan
+
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download Image Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: my-python-app
+          path: .
 
       - name: Install kind
         run: |
@@ -65,8 +81,8 @@ jobs:
           chmod +x ./kind
           sudo mv ./kind /usr/local/bin/kind
 
-      - name: Create kind cluster
-        run: kind create cluster --name github-actions
+      - name: Create kind cluster from config
+        run: kind create cluster --name github-actions --config kind-config.yaml
 
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
@@ -81,31 +97,34 @@ jobs:
       - name: Configure kubeconfig
         run: |
           mkdir -p $HOME/.kube
-          kind get kubeconfig --name github-actions > $HOME/.kube/config 
+          kind get kubeconfig --name github-actions > $HOME/.kube/config
           chmod 600 $HOME/.kube/config
+
+      - name: Load image into kind cluster
+        run: kind load image-archive my-python-app.tar --name github-actions
 
       - name: Deploy Helm chart
         run: |
           helm upgrade --install my-python-app ./helm/my-python-app \
             --namespace my-namespace \
             --create-namespace \
-            --set image.repository=localhost:5000/my-python-app \
+            --set image.repository=my-python-app \
             --set image.tag=latest
 
       - name: Check Pods and Deployment Status
         run: |
-            kubectl get nodes -o wide
-            kubectl get all -n my-namespace
-            kubectl rollout status deployment/my-python-app -n my-namespace
+          kubectl get nodes -o wide
+          kubectl get all -n my-namespace
+          kubectl rollout status deployment/my-python-app -n my-namespace
 
       - name: Port-forward service
         run: |
-          nohup kubectl port-forward svc/my-python-app -n my-namespace 8080:80 &
-          sleep 5
+          nohup kubectl port-forward svc/my-python-app -n my-namespace 8080:80 > pf.log 2>&1 &
+          sleep 10
+          echo "Port-forward running..."
 
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.12.0
         with:
           target: "http://localhost:8080"
         continue-on-error: true
-
