Update build and deploy.yml

--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -105,7 +105,7 @@ jobs:
 
       - name: Deploy Helm chart
         run: |
-          helm upgrade --upgrade my-python-app ./helm/my-python-app \
+          helm upgrade my-python-app ./helm/my-python-app \
             --namespace my-namespace \
             --create-namespace \
             --set image.repository=my-python-app \
