--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -105,8 +105,7 @@ jobs:
 
       - name: Deploy Helm chart
         run: |
-          kubectl delete deployment my-python-app -n my-namespace || true
-          kubectl delete service my-python-app -n my-namespace || true
+          kubectl delete svc my-python-app -n my-namespace
           helm upgrade --install my-python-app ./helm/my-python-app \
             --namespace my-namespace \
             --create-namespace \
