Update build and deploy.yml

--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -105,13 +105,12 @@ jobs:
 
       - name: Deploy Helm chart
         run: |
-          helm list --all-namespaces
           helm upgrade --install my-python-app ./helm/my-python-app \
-                   --namespace my-namespace \
-                   --create-namespace \
-                   --replace \
-                   --set image.repository=my-python-app \
-                   --set image.tag=latest
+               --namespace my-namespace \
+               --create-namespace \
+               --set image.repository=my-python-app \
+               --set image.tag=latest \
+               --force
 
       - name: Check Pods and Deployment Status
         run: |
