--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -65,71 +65,78 @@ jobs:
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
     needs: build-and-scan
-
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Download Image Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: my-python-app
-          path: .
+    # 1️⃣ Install kind
+    - name: Install kind
+      run: |
+        curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.22.0/kind-linux-amd64
+        chmod +x ./kind
+        sudo mv ./kind /usr/local/bin/kind
 
-      - name: Install kind
-        run: |
-          curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.22.0/kind-linux-amd64
-          chmod +x ./kind
-          sudo mv ./kind /usr/local/bin/kind
+    # 2️⃣ Delete any old cluster and create a new one
+    - name: Create kind cluster from config
+      run: |
+        kind delete cluster --name github-actions || true
+        kind create cluster --name github-actions --config kind-config.yaml
 
-      - name: Create kind cluster from config
-        run: |
-           # Delete existing cluster if it exists
-           kind delete cluster --name github-actions || true
+    # 3️⃣ Set KUBECONFIG
+    - name: Configure kubeconfig
+      run: |
+        export KUBECONFIG="$(kind get kubeconfig-path --name=github-actions)"
+        echo "KUBECONFIG=$KUBECONFIG" >> $GITHUB_ENV
+        kubectl cluster-info
 
-           # Create a new cluster using the config file
-           kind create cluster --name github-actions --config kind-config.yaml
+    # 4️⃣ Install kubectl
+    - name: Set up kubectl
+      uses: azure/setup-kubectl@v3
+      with:
+        version: 'v1.29.0'
 
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'v1.29.0'
+    # 5️⃣ Install Helm
+    - name: Set up Helm
+      uses: azure/setup-helm@v3
+      with:
+        version: 'v3.12.0'
 
-      - name: Set up Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: 'v3.12.0'
+    # 6️⃣ Create dynamic namespace
+    - name: Generate unique namespace
+      run: |
+        NAMESPACE="my-namespace-$(date +%s)"
+        echo "NAMESPACE=$NAMESPACE" >> $GITHUB_ENV
 
-      - name: Configure kubeconfig
-        run: |
-          mkdir -p $HOME/.kube
-          kind get kubeconfig --name github-actions > $HOME/.kube/config
-          chmod 600 $HOME/.kube/config
+    # 7️⃣ Delete old deployment/service if needed
+    - name: Cleanup old resources (optional)
+      run: |
+        kubectl delete deployment my-python-app -n $NAMESPACE || true
+        kubectl delete svc my-python-app -n $NAMESPACE || true
 
-      - name: Load image into kind cluster
-        run: kind load image-archive my-python-app.tar --name github-actions
+    # 8️⃣ Deploy Helm chart
+    - name: Deploy Helm chart
+      run: |
+        helm upgrade --install my-python-app ./helm/my-python-app \
+          --namespace $NAMESPACE \
+          --create-namespace \
+          --set image.repository=my-python-app \
+          --set image.tag=latest
 
-      - name: Deploy Helm chart
-        run: |
-          helm upgrade --install my-python-app ./helm/my-python-app \
-               --namespace my-namespace-v2 \
-               --create-namespace \
-               --set image.repository=my-python-app \
-               --set image.tag=latest
+    # 9️⃣ Check pods and deployment status
+    - name: Check Pods and Deployment Status
+      run: |
+        kubectl get nodes -o wide
+        kubectl get all -n $NAMESPACE
+        kubectl rollout status deployment/my-python-app -n $NAMESPACE
 
-      - name: Check Pods and Deployment Status
-        run: |
-          kubectl get nodes -o wide
-          kubectl get all -n my-namespace
-          kubectl rollout status deployment/my-python-app -n my-namespace
+    # 🔟 Port-forward for DAST scan
+    - name: Port-forward service
+      run: |
+        nohup kubectl port-forward svc/my-python-app -n $NAMESPACE 8080:80 &
+        sleep 5
 
-      - name: Port-forward service
-        run: |
-          nohup kubectl port-forward svc/my-python-app -n my-namespace 8080:80 > pf.log 2>&1 &
-          sleep 10
-          echo "Port-forward running..."
-
-      - name: Run OWASP ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.12.0
-        with:
-          target: "http://localhost:8080"
-        continue-on-error: true
+    # 1️⃣1️⃣ Run OWASP ZAP Baseline Scan
+    - name: Run OWASP ZAP Baseline Scan
+      uses: zaproxy/action-baseline@v0.12.0
+      with:
+        target: "http://localhost:8080"
+      continue-on-error: true
