--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -75,16 +75,15 @@ jobs:
         chmod +x ./kind
         sudo mv ./kind /usr/local/bin/kind
 
-    # 2️⃣ Delete any old cluster and create a new one
     - name: Create kind cluster from config
-      run: kind create cluster --name github-actions --config kind-config.yaml
+      run:  kind create cluster --name github-actions --config kind-config.yaml
 
     # 3️⃣ Set KUBECONFIG
     - name: Configure kubeconfig
       run: |
-        export KUBECONFIG="$(kind get kubeconfig-path --name=github-actions)"
-        echo "KUBECONFIG=$KUBECONFIG" >> $GITHUB_ENV
-        kubectl cluster-info
+          mkdir -p $HOME/.kube
+          kind get kubeconfig --name github-actions > $HOME/.kube/config
+          chmod 600 $HOME/.kube/config
 
     # 4️⃣ Install kubectl
     - name: Set up kubectl
@@ -103,12 +102,6 @@ jobs:
       run: |
         NAMESPACE="my-namespace-$(date +%s)"
         echo "NAMESPACE=$NAMESPACE" >> $GITHUB_ENV
-
-    # 7️⃣ Delete old deployment/service if needed
-    - name: Cleanup old resources (optional)
-      run: |
-        kubectl delete deployment my-python-app -n $NAMESPACE || true
-        kubectl delete svc my-python-app -n $NAMESPACE || true
 
     # 8️⃣ Deploy Helm chart
     - name: Deploy Helm chart
