--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -106,7 +106,7 @@ jobs:
     # 8️⃣ Deploy Helm chart
     - name: Deploy Helm chart
       run: |
-        helm upgrade --install my-python-app-v2 ./helm/my-python-app \
+        helm upgrade --install my-python-app-v2 ./helm/my-python-app-v2 \
           --namespace $NAMESPACE \
           --create-namespace \
           --set image.repository=my-python-app \
