Update build and deploy.yml

--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -1,14 +1,3 @@
-name: 🛡️ Python Build and Deploy to Minikube
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
-
 jobs:
   build-and-deploy:
     name: Build Docker Image and Deploy to Minikube
@@ -21,3 +10,38 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t my-python-app:latest .
+
+      # --- Install Minikube ---
+      - name: Install Minikube
+        run: |
+          curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+          chmod +x minikube
+          sudo mv minikube /usr/local/bin/
+
+      # --- Start Minikube with Docker driver ---
+      - name: Start Minikube
+        run: |
+          minikube start --driver=docker
+          minikube status
+
+      # --- Set kubectl context ---
+      - name: Configure kubectl
+        run: |
+          kubectl config use-context minikube
+          kubectl get nodes
+
+      # --- Create namespace if not exists ---
+      - name: Create namespace
+        run: kubectl get ns my-namespace || kubectl create ns my-namespace
+
+      # --- Deploy Kubernetes manifests ---
+      - name: Deploy manifests
+        run: |
+          kubectl apply -f k8s/deployment.yaml -n my-namespace
+          kubectl apply -f k8s/service.yaml -n my-namespace
+
+      # --- Verify deployment ---
+      - name: Verify deployment
+        run: |
+          kubectl get all -n my-namespace
+          kubectl rollout status deployment/my-python-app -n my-namespace
