Update build and deploy.yml

--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -63,6 +63,7 @@ jobs:
       - name: Verify Kubernetes Deployment
         run: |
          kubectl get pods -n my-namespace
+         kubectl logs deploy/my-python-app -n my-namespace
 
       # --- Port Forward ---
       - name: Port Forward service
