--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -82,7 +82,18 @@ jobs:
         uses: zaproxy/action-baseline@v0.12.0
         with:
          target: "http://localhost:8080"
+         output_folder: zap-output
         continue-on-error: true
+     # --- Fix Permissions ---
+      - name: Fix ZAP Report Permissions
+        run: sudo chown -R $USER:$USER zap-output
+
+     # --- Upload ZAP Reports ---
+      - name: Upload ZAP Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-scan
+          path: zap-output/*
 
           
 
