--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -77,6 +77,10 @@ jobs:
       - name: Test service endpoint
         run: curl -I http://localhost:8080
 
+     # --- Prepare ZAP output folder ---
+      - name: Prepare ZAP output folder
+        run: mkdir -p zap-output && chmod a+rw zap-output
+        
      # --- OWASP ZAP Scan ---
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.12.0
@@ -84,9 +88,6 @@ jobs:
          target: "http://localhost:8080"
          output_folder: zap-output
         continue-on-error: true
-     # --- Fix Permissions ---
-      - name: Fix ZAP Report Permissions
-        run: sudo chown -R $USER:$USER zap-output
 
      # --- Upload ZAP Reports ---
       - name: Upload ZAP Reports
