--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -43,7 +43,18 @@ jobs:
         run: |
           eval $(minikube docker-env)
           docker build -t my-python-app:latest .
+       
+       #  Install kubectl & Helm
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: v1.29.0
 
+      - name: Install Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: v3.12.0
+          
       # --- Ensure namespace exists ---
       - name: Create namespace
         run: |
