Update build and deploy.yml

--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -78,11 +78,11 @@ jobs:
          kubectl get pods -n my-namespace
          kubectl logs deploy/my-python-app -n my-namespace
 
-      # 7️⃣ Deploy Application using Helm
+      # Deploy Application using Helm
     # ---------------------------------------------------
       - name: Deploy application via Helm
         run: |
-          helm upgrade --install my-python-app ./helm/my-python-app \
+          helm upgrade --install my-python-app-helm ./helm/my-python-app \
           --namespace my-namespace \
           --create-namespace \
           --set image.repository=my-python-app \
@@ -91,7 +91,7 @@ jobs:
       - name: Verify Helm Deployment
         run: |
           kubectl get all -n my-namespace
-          kubectl rollout status deployment/my-python-app -n my-namespace
+          kubectl rollout status deployment/my-python-app-helm -n my-namespace
 
       # --- Port Forward ---
       - name: Port Forward service
